--- a/index.html
+++ b/index.html
@@ -51,8 +51,8 @@
                     <h3>Your budget <br> and vision <br></h3>
                     <p>Make the next steps easier! We'll help you gather
                         insformation,
-                        find your wedding style, set up a budget-even create a
-                        guest list</p>
+                        find your wedding style, set up a budget-
+                        guest list.</p>
                     <img src="./Assets/img2.png" alt="">
                 </div>
                 <div class="card">
@@ -124,8 +124,8 @@
                     Service</div>
                 <div class="card2"><img src="./Assets/img14.jpg" alt="">Wedding
                     Fashion</div>
-                <div class="card2"><img src="./Assets/img15.jpeg" alt="">Health
-                    & beauty</div>
+                    <div class="card2"><img src="./Assets/img15.jpeg" alt="">Wedding
+                        beauty</div>
             </div>
         </section>
 
