--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <link
             href="https://fonts.googleapis.com/css2?family=Lato:wght@300&family=Montserrat:wght@500&family=Ubuntu:wght@500&display=swap"
             rel="stylesheet">
+
     </head>
     <body>
         <section class="landing">
@@ -21,7 +22,7 @@
                 <div class="navLinks">
                     <li><a href="#middle">Vendors</a></li>
                     <li><a href="#venue">Venues</a></li>
-                    <li><a href="">Dates</a></li>
+                   <li><a href="date.html">date</a></li>
                     <li><a href="#ideas">Ideas</a></li>
                 </div>
                 <div class="register">
@@ -31,7 +32,7 @@
 
             <div class="container">
                 <div class="content">
-               
+
                     <h1><span> Just Engaged</span><br> How long will you <br>
                         wait
                         to plan ?</h1>
@@ -124,8 +125,8 @@
                     Service</div>
                 <div class="card2"><img src="./Assets/img14.jpg" alt="">Wedding
                     Fashion</div>
-                    <div class="card2"><img src="./Assets/img15.jpeg" alt="">Wedding
-                        beauty</div>
+                <div class="card2"><img src="./Assets/img15.jpeg" alt="">Wedding
+                    beauty</div>
             </div>
         </section>
 
@@ -170,6 +171,6 @@
             </div>
 
         </section>
-
+  
     </body>
 </html>
