--- a/index.html
+++ b/index.html
@@ -111,6 +111,8 @@
 
                 <h1> <span> Couples loves us & We loves Them </span> </h1>
                 <h1><i class="fa-solid fa-heart" style="font-size: 42px;"></i></h1>
+                <h1>Date your Partner</h1>
+               <div class="now"><a href="date.html">| NOW |</a></div>
             </div>
             <div class="ideas"> <h1>Ideas and Tips</h1>
                 <p>Get inspired with the latest trends and advice from our
